# dczar

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  mecabrc
docs/: dc_model.md  pas_model.md  preprocess.md  pretraining.md  rg_model.md
samples/: dialogue-aspzero-instances.pkl  dialogue-complemented.txt  dialogue-parsed.txt  dialogue.txt  jawiki-cloze-instances.jsonl  jawiki-parsed.txt  jawiki-pzero-instances.jsonl  jawiki.txt
src/dialogue/: complement.py  evaluating.py  extract_predicates.py  generate_responses.py  run.py  training.py  utils.py
src/dialogue/args/: evaluating_cloze_complement_jawiki_params.yml  finetuning_cloze_complement_jawiki_params.yml
src/dialogue/jmlm_scoring/: setup.py
src/dialogue/jmlm_scoring/jmlm/: scorers.py
src/zar/: compute_score.py  decode.py  evaluating.py  instances.py  iterators.py  loss.py  models.py  optimizers.py  preprocess.py  preprocess_jawiki.py  preprocess_ntc.py  preprocess_tweet.py  preprocess_with_cabocha.sh  run.py  schedulers.py  tokenizer.py  training.py  utils.py  utils_pytorch.py
src/zar/args/: evaluating_cloze_as_pzero_jawiki_params.yml  finetuning_cloze_as_pzero_jawiki_params.yml  pretraining_cloze_jawiki_params.yml  pretraining_pzero_jawiki_params.yml
